+ The queries for ports now differ between protocol, tcp/udp/icmp. The info about the protocol was in the database but was not been used til now.
+ The legend in the ports view have two new columns one for the protocol and another one for the service name.

+ Port to service translation: Using the port number and the protocol a translation to services is made.

+ update test, and addnew test for the class Port2service.

git-svn-id: https://svn.code.sf.net/p/pmgraph/code/pmgraph@225 903098bd-d3be-4b5e-9df1-ec1ba492e1ff

--- a/web/port_assignment.html
+++ b/web/port_assignment.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Common port Assignement</title>
+<title>Common port Assignment</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="Stylesheet" href="styles/main.css" type="text/css" />
 
